# Paint

./: .gitignore  README.md  meson.build  org.gnome.paint.json
.flatpak-builder/cache/refs/heads/x86_64-org.gnome.paint.json/: init
.flatpak-builder/checksums/: x86_64-org.gnome.paint.json
data/: meson.build  org.gnome.paint.desktop.in  org.gnome.paint.gschema.xml  org.gnome.paint.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: brush.c  brush.h  canvas-region-snapshot.c  canvas-region-snapshot.h  canvas-region.c  canvas-region.h  canvas-region.ui  draw-event.h  drawing-tool.h  line.c  line.h  main.c  meson.build  paint-application.c  paint-application.h  paint-window.c  paint-window.h  paint-window.ui  paint.gresource.xml  style.css  text.c  text.h  toolbar.c  toolbar.h  toolbar.ui
src/css/: style.css
src/drawing-tools/: brush.c  brush.h  circle.c  circle.h  color-picker.c  color-picker.h  drawing-tool-type.h  fill.c  fill.h  line.c  line.h  meson.build  rectangle.c  rectangle.h  select.c  select.h  text.c  text.h
src/drawing_tools/: brush.c  brush.h  circle.c  circle.h  color-picker.c  color-picker.h  drawing-tool-type.h  fill.c  line.c  line.h  meson.build  rectangle.c  rectangle.h  text.c  text.h
src/ui/: canvas-region.ui  help-overlay.ui  paint-window.ui  toolbar.ui
src/utils/: cairo-utils.c  cairo-utils.h  canvas-region-caretaker.c  canvas-region-caretaker.h  colors.c  colors.h  meson.build  point.c  point.h
